navbar logout button stacked to right. overflow-x fixed in all pages

--- a/financiation-react/src/assets/styles/GroupCard.css
+++ b/financiation-react/src/assets/styles/GroupCard.css
@@ -104,9 +104,8 @@
     font-weight: bold;
 
 }
-
-* {
-    overflow-y: auto;
+.GeneralGroupCard{
+    overflow-y: visible;
 }
 
 .colgroupcard {
