--- a/financiation-react/src/assets/styles/LandingPage.css
+++ b/financiation-react/src/assets/styles/LandingPage.css
@@ -1,5 +1,5 @@
-.background {
-    overflow: hidden;
+* {
+    overflow-x: hidden;
 }
 
 .background {
